<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SettingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutSettingHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_notedetail_headfooter"
        android:paddingStart="@dimen/_6sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingEnd="@dimen/_6sdp"
        android:paddingBottom="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageSettingBack"
            android:layout_width="@dimen/_14sdp"
            android:layout_height="@dimen/_14sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </LinearLayout>

        <TextView
            android:id="@+id/settingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_weight="1"
            android:text="@string/setting"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageSettingBack"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/background_light"
        android:gravity="top"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingTop="50dp"
        android:paddingRight="50dp"
        app:layout_constraintTop_toBottomOf="@+id/layoutSettingHeader">

        <Button
            android:id="@+id/settingLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_language_5"
            android:text="@string/language"
            android:textAlignment="textStart"
            android:textColor="@color/black"></Button>

        <Button
            android:id="@+id/settingNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_bell_64"
            android:text="@string/notification"
            android:textAlignment="textStart"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/settingLock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_lock_lock_4"
            android:text="@string/lock"
            android:textAlignment="textStart"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/settingBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_image_83"
            android:text="@string/background"
            android:textAlignment="textStart"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/settingFolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_tag_repair"
            android:text="@string/folder"
            android:textAlignment="textStart"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/achievement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_achievement_21"
            android:text="@string/achievement"
            android:textAlignment="textStart"
            android:textColor="@color/black" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>