<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingStart="@dimen/_5sdp"
    android:paddingEnd="@dimen/_5sdp"
    android:paddingBottom="@dimen/_20sdp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_with"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_20sdp"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:hint="@string/email_to_share"
        app:boxBackgroundMode="outline"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmailSharing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:hint="@string/permission"
        app:boxBackgroundMode="outline"
        app:errorEnabled="true">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteNoteSharingPermission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />


    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp">
        <Button
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:id="@+id/buttonShareCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_weight="0.50"
            />
        <Button
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:id="@+id/buttonShare"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:layout_weight="0.50"
            />
    </LinearLayout>

</LinearLayout>