<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingStart="@dimen/_2sdp"
    android:paddingEnd="@dimen/_2sdp"
    tools:context=".activity.FeedbackActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/feedback"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp">

        <TextView
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:labelFor="@id/editTextFeedbackName"
            android:text="@string/name"
            android:textSize="@dimen/_14ssp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutTextFeedbackName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@null"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/editTextFeedbackName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:contentDescription="@string/app_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp">

        <TextView
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:labelFor="@id/editTextFeedbackEmail"
            android:text="@string/email"
            android:textSize="@dimen/_14ssp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutTextFeedbackEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@null"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/editTextFeedbackEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:contentDescription="@string/app_name"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:labelFor="@id/editTextFeedbackEmail"
            android:text="@string/comment"
            android:textSize="@dimen/_14ssp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutTextFeedbackComment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:boxBackgroundMode="none"
            app:errorEnabled="true">
            <EditText
                android:id="@+id/editTextFeedbackComment"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:autofillHints="name"
                android:background="@drawable/background_feedback_comment"
                android:contentDescription="@string/app_name"
                android:gravity="top"
                android:importantForAutofill="no"
                android:inputType="textMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonFeedBackCancel"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:backgroundTint="@color/buttonBlack"
            android:text="@string/cancel"
            android:textSize="@dimen/_12ssp" />

        <Button
            android:id="@+id/buttonFeedBackSend"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:backgroundTint="@color/buttonBlack"
            android:text="@string/send"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>
</LinearLayout>