<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="@dimen/_5sdp"
    android:paddingBottom="@dimen/_10sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/textViewEditFolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/folder"
            android:textSize="@dimen/_20ssp"
            android:layout_margin="@dimen/_15sdp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textViewEditText"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewEditFolder"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittextEditFolder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/folder_name"
                android:importantForAutofill="no"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <include
            android:id="@+id/layoutFolderDialogColorChooser"
            layout="@layout/layout_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edittextEditFolder" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            >

            <Button
                android:id="@+id/buttonFolderDialogCancel"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textSize="@dimen/_10ssp"
                android:layout_weight="0.5"
                android:layout_margin="@dimen/_5sdp"/>

            <Button
                android:id="@+id/buttonFolderDialogOk"
                style="@style/Widget.Material3.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:text="@string/ok"
                android:textSize="@dimen/_10ssp"
                android:layout_weight="0.5"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>